Redefine some descriptions

--- a/HMCL/src/main/resources/assets/lang/I18N_zh_CN.properties
+++ b/HMCL/src/main/resources/assets/lang/I18N_zh_CN.properties
@@ -112,7 +112,7 @@ account.methods.microsoft.hint=你需要按照以下步骤添加：\n1.点击“
 account.methods.microsoft.manual=你需要按照以下步骤添加：\n1.点击“登录”按钮\n2.在网页浏览器显示的网站中输入：<b>%1$s</b>（已自动拷贝，点此再次拷贝），并点击“下一步”\n3.按照网站的提示登录\n4.当网站提示“是否允许此应用访问你的信息?”的标识时，请点击“是”\n5.当网站提示“大功告成”的标识时，及表示登录成功！然后等待账户完成添加即可\n-若网站提示“出现错误”的标识时，请重新按照以上步骤重新添加\n-若账户添加失败，请重新按照以上步骤重新添加\n-若网站未能显示，请手动在网页浏览器中打开：%2$s\n<b>-若设备网络环境不佳，可能登录网站加载很慢甚至无法加载，此时请使用 VPN 或代理服务器并重试</b>\n-若登录微软账户的 Token （不是密码）泄露,可点击下方“解除账户绑定”解除登录授权，然后等待 Token 过期
 account.methods.microsoft.profile=帐户设置页
 account.methods.forgot_password=忘记密码
-account.methods.microsoft.snapshot=友一暂不支持微软登录，请使用 Hello Minecraft! Launcher 进行登录。
+account.methods.microsoft.snapshot=此版本友一暂不支持微软登录，您可通过更新版本来尝试解决此问题。
 account.methods.microsoft.snapshot.access=访问 HMCL 网站
 account.methods.microsoft.waiting_browser=等待在新打开的浏览器窗口中完成登录……
 account.methods.offline=离线模式
@@ -527,7 +527,7 @@ launcher=启动器
 launcher.agreement=用户协议与免责声明
 launcher.agreement.accept=同意
 launcher.agreement.decline=拒绝
-launcher.agreement.hint=友一是 Hello Minecraft! Launcher (HMCL) 的一个非官方分支，为用户提供基于 HiPer 的联机服务。\n友一暂不提供 CurseForge 相关服务，您可以使用 HMCL 下载后再使用友一进行联机。\n同意本软件的用户协议与免责声明以使用本软件。
+launcher.agreement.hint=友一是基于 Hello Minecraft! Launcher 二次开发制品，致力于为用户提供最棒的多人游玩体验。\n同意本软件的用户协议与免责声明以使用本软件。
 launcher.background=背景地址
 launcher.background.choose=选择背景路径
 launcher.background.classic=经典
@@ -981,7 +981,7 @@ settings.type.special.edit.hint=当前游戏版本 [%s] 启用了游戏特定设
 
 sponsor=赞助
 sponsor.bmclapi=国内下载源由 BMCLAPI 和我的世界中文论坛 (MCBBS) 提供高速下载服务。BMCLAPI 为公益服务，赞助 BMCLAPI 可以帮助作者更好的提供稳定高速的下载服务，[点击此处查阅详细信息]
-sponsor.hmcl=友一是 Hello Minecraft! Launcher 的一个非官方分支。你的赞助将帮助 HMCL 与友一获得更好的发展。[点击此处查阅更多详细信息]
+sponsor.hmcl=友一是基于 Hello Minecraft! Launcher 二次开发制品，致力于为用户提供最棒的多人游玩体验。你对 Hello Minecraft! Launcher 的赞助将帮助 HMCL 与 友一 获得更好的发展。[点击此处查阅更多详细信息]
 
 system.architecture=架构
 system.operating_system=操作系统
