--- a/HMCL/src/main/resources/assets/lang/I18N_zh_CN.properties
+++ b/HMCL/src/main/resources/assets/lang/I18N_zh_CN.properties
@@ -37,13 +37,13 @@ about.thanks_to.bangbang93.statement=提供 BMCLAPI 下载源，请赞助支持 
 about.thanks_to.contributors=所有通过 Issues、Pull Requests 等方式参与本项目的贡献者
 about.thanks_to.contributors.statement=没有开源社区的支持，Hello Minecraft! Launcher 就无法走到今天
 about.thanks_to.gamerteam.statement=提供默认背景图
-about.thanks_to.glavo.statement=友一维护者，GitHub/B 站 ID：Glavo
+about.thanks_to.glavo.statement=友一管理与监督者，GitHub/B 站 ID：Glavo
 about.thanks_to.mcbbs=MCBBS 我的世界中文论坛
 about.thanks_to.mcbbs.statement=提供 MCBBS 下载源
 about.thanks_to.mcmod=MC 百科
 about.thanks_to.mcmod.statement=提供 Mod 中文名映射表与 Mod 百科
 about.thanks_to.noin=阿猫 (mcer.cn)
-about.thanks_to.noin.statement=提供多人联机服务 (cato - ioi 系列作品)
+about.thanks_to.noin.statement=HiPer 作者，提供多人联机服务
 about.thanks_to.red_lnn.statement=提供默认背景图
 about.thanks_to.users=HMCL 用户群成员
 about.thanks_to.users.statement=感谢用户群成员赞助充电、积极催更、反馈问题、出谋划策
@@ -305,7 +305,7 @@ download.failed=下载失败: %1$s，错误码：%2$d
 download.failed.empty=[没有可供安装的版本，点击此处返回]
 download.failed.refresh=[加载版本列表失败，点击此处重试]
 download.game=新游戏
-download.no_api_key=友一暂不支持下载模组、整合包、资源包等内容，请使用 <a href="https://hmcl.huangyuhui.net/">Hello Minecraft! Launcher</a> 进行下载。
+download.no_api_key=此版本友一暂不支持下载模组、整合包、资源包等内容，请使用正式版或 <a href="https://hmcl.huangyuhui.net/">Hello Minecraft! Launcher</a> 进行下载。
 download.provider.mcbbs=我的世界中文论坛 (MCBBS, https://www.mcbbs.net)
 download.provider.bmclapi=BMCLAPI（bangbang93，https://bmclapi2.bangbang93.com）
 download.provider.mojang=官方（OptiFine 自动安装使用 BMCLAPI 下载源）
