--- a/HMCL/src/main/resources/assets/lang/I18N_zh_CN.properties
+++ b/HMCL/src/main/resources/assets/lang/I18N_zh_CN.properties
@@ -114,7 +114,7 @@ account.methods.microsoft.hint=你需要按照以下步骤添加：\n1.点击“
 account.methods.microsoft.manual=你需要按照以下步骤添加：\n1.点击“登录”按钮\n2.在网页浏览器显示的网站中输入：<b>%1$s</b>（已自动拷贝，点此再次拷贝），并点击“下一步”\n3.按照网站的提示登录\n4.当网站提示“是否允许此应用访问你的信息?”的标识时，请点击“是”\n5.当网站提示“大功告成”的标识时，及表示登录成功！然后等待账户完成添加即可\n-若网站提示“出现错误”的标识时，请重新按照以上步骤重新添加\n-若账户添加失败，请重新按照以上步骤重新添加\n-若网站未能显示，请手动在网页浏览器中打开：%2$s\n<b>-若设备网络环境不佳，可能登录网站加载很慢甚至无法加载，此时请使用 VPN 或代理服务器并重试</b>\n-若登录微软账户的 Token （不是密码）泄露,可点击下方“解除账户绑定”解除登录授权，然后等待 Token 过期
 account.methods.microsoft.profile=帐户设置页
 account.methods.forgot_password=忘记密码
-account.methods.microsoft.snapshot=友一快照版暂不支持微软登录，请使用 Hello Minecraft! Launcher 进行登录。
+account.methods.microsoft.snapshot=友一快照版暂不支持微软登录，请使用正式版进行登录。
 account.methods.microsoft.snapshot.access=访问 HMCL 网站
 account.methods.microsoft.waiting_browser=等待在新打开的浏览器窗口中完成登录……
 account.methods.offline=离线模式
@@ -306,7 +306,7 @@ download=下载
 download.code.404=远程服务器不包含需要下载的文件: %s
 download.content=游戏内容
 download.curseforge.customization=光影与游戏定制
-download.curseforge.unavailable=HMCL 预览版暂不支持访问 CurseForge，请使用稳定版或测试版进行下载。
+download.curseforge.unavailable=友一预览版暂不支持访问 CurseForge，请使用稳定版或测试版进行下载。
 download.existing=文件已存在，无法保存。你可以在模组选择栏中的右侧按钮另存为将文件保存至其他地方。
 download.external_link=打开下载网站
 download.failed=下载失败: %1$s，错误码：%2$d
@@ -727,16 +727,16 @@ mods.restore=回退
 mods.url=官方页面
 
 multiplayer=多人联机
-multiplayer.agreement.prompt=多人联机功能由 速聚 提供。使用前，你需要先同意多人联机服务提供方 速聚 的用户协议与免责声明。\n你需要了解，HMCL 仅为 速聚 提供多人联机服务入口，使用中遇到的任何问题由 速聚 负责处理。\n您在使用多人联机服务过程中所遇到的任何问题与纠纷（包括其付费业务）均与 HMCL 无关，请与 速聚 协商解决。
+multiplayer.agreement.prompt=多人联机功能由 <a href="https://mcer.cn/">速聚</a> 提供。使用前，你需要先同意多人联机服务提供方 速聚 的用户协议与免责声明。\n你需要了解，友一仅为 速聚 提供多人联机服务入口，使用中遇到的任何问题由 速聚 负责处理。\n您在使用多人联机服务过程中所遇到的任何问题与纠纷（<b>包括其付费业务</b>）均与友一无关，请与 速聚 协商解决。
 multiplayer.download=正在下载依赖……
 multiplayer.download.failed=初始化失败，部分文件未能完成下载……
 multiplayer.download.success=多人联机初始化完成√
 multiplayer.download.unsupported=多人联机依赖不支持当前系统或平台！
 multiplayer.error.failed_get_device=HiPer 无法创建网络设备，可能是 HiPer 正在运行中。请关闭正在运行中的其他启动器，或通过任务管理器终止 HiPer。
 multiplayer.error.failed_load_config=HiPer 初始化失败，可能是联机索引码存在问题或索引码已过期，请检查索引码是否输入正确！你可向多人联机提供方联系寻求帮助。
-multiplayer.error.failed_sudo.linux=HiPer 需要管理员权限才能运行，你可以通过设置环境变量 HMCL_ASKPASS 配置 HiPer 如何申请权限。\n若将 HMCL_ASKPASS 设置为 'false'，请通过配置 sudoers 文件允许 '%s' 免密获取 root 权限，重启后再次启动 HMCL 即可；\n若将 HMCL_ASKPASS 设置为 'user'，请先配置环境变量 SUDO_ASKPASS，HMCL 将使用 sudo --askpass 启动 HiPer (具体请参见 man sudo)。
+multiplayer.error.failed_sudo.linux=HiPer 需要管理员权限才能运行，你可以通过设置环境变量 HMCL_ASKPASS 配置 HiPer 如何申请权限。\n若将 HMCL_ASKPASS 设置为 'false'，请通过配置 sudoers 文件允许 '%s' 免密获取 root 权限，重启后再次启动友一即可；\n若将 HMCL_ASKPASS 设置为 'user'，请先配置环境变量 SUDO_ASKPASS，友一将使用 sudo --askpass 启动 HiPer (具体请参见 man sudo)。
 multiplayer.error.failed_sudo.mac=HiPer 需要管理员权限才能运行。是否要授予 HiPer 管理员权限？\n点击“是”授予 HiPer 管理员权限，然后重启计算机后再次打开启动器即可联机。
-multiplayer.error.failed_sudo.windows=HiPer 需要管理员权限才能运行，请使用管理员权限重新启动 HMCL。是否查看教程？
+multiplayer.error.failed_sudo.windows=HiPer 需要管理员权限才能运行，请使用管理员权限重新启动友一。是否查看教程？
 multiplayer.error.file_not_found=已发现 HiPer 有可用的更新，请重新进入多人联机页面以更新 HiPer。
 multiplayer.error.session_expired=本次使用时间已结束，若要继续使用，请更换联机索引码
 multiplayer.exit=HiPer 意外退出，退出码 %d
@@ -761,7 +761,7 @@ multiplayer.persistence.import.file_already_exists=授权文件已经存在。
 multiplayer.persistence.import.title=选择授权文件
 multiplayer.persistence.import.token_not_match=你选择的授权文件可能与索引码不匹配，是否继续导入？
 multiplayer.persistence.license_file=授权文件
-multiplayer.powered_by=HMCL 多人联机由 (<a href="https://mcer.cn">速聚</a>) 授权提供 <a href\="https://docs.hmcl.net/multiplayer/#%E4%BD%BF%E7%94%A8%E6%8E%88%E6%9D%83">授权协议</a>
+multiplayer.disclaimer=友一为 <a href="https://mcer.cn">速聚</a> 提供联机服务入口，使用中遇到的任何问题由 速聚 负责处理
 multiplayer.report=违法违规举报
 multiplayer.token=索引码
 multiplayer.token.apply=获取联机索引码
